--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>CyberSentinel SOAR | Security Orchestration & Response</title>
+    <meta name="description" content="Enterprise SOAR platform for security orchestration, automation, and response. Real-time alerts, playbook automation, and SOC workflows." />
+    <meta name="author" content="CyberSentinel" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="CyberSentinel SOAR" />
+    <meta property="og:description" content="Enterprise SOAR for security teams" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
